--- a/OpenCV/Ch_2_OpenCV_기초사용법.ipynb
+++ b/OpenCV/Ch_2_OpenCV_기초사용법.ipynb
@@ -945,7 +945,7 @@
     "\n",
     "fps = cap.get(cv2.CAP_PROP_FPS) \n",
     "# 카메라에서 초당 프레임 수 받아오기\n",
-    "# 그냥 30으로 숫자 쳐도 됨\n",
+    "# 그냥 숫자 쳐도 됨 ex) 30\n",
     "\n",
     "# fourcc = cv2.VideoWriter_fourcc(*'MPEG')\n",
     "# 코덱 - 압축 형식???\n",
@@ -1000,14 +1000,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import sys\n",
-    "# import numpy as np\n",
-    "# import cv2\n",
-    "\n",
+    "import sys\n",
+    "import numpy as np\n",
+    "import cv2\n",
     "\n",
     "img = cv2.imread('cat.bmp', cv2.IMREAD_GRAYSCALE)\n",
     "\n",
@@ -1022,20 +1021,29 @@
     "\n",
     "while True:\n",
     "    keycode = cv2.waitKey()\n",
-    "    if keycode == ord('i'):\n",
-    "        img = ~img\n",
+    "    if keycode == ord('i'): # i 누르면 이미지 반전\n",
+    "        img = ~img \n",
     "        cv2.imshow('image', img)\n",
-    "    elif keycode == 27:\n",
+    "    elif keycode == 27: # ESC 누르면 종료\n",
     "        break\n",
     "\n",
-    "cv2.destroyAllWindows()\n"
+    "cv2.destroyAllWindows()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "- i 입력 전\n",
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/b160978b-2ea4-4861-afc8-947c005cb4af/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210701%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210701T053600Z&X-Amz-Expires=86400&X-Amz-Signature=b5748cb48a5830c9c03e891c31caa815f73a29d1bc9c4a79253311f6ea9ecd38&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)\n",
+    "\n",
+    "- i 입력 후\n",
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/db580606-5c89-45b3-9591-e005f1951237/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210701%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210701T053637Z&X-Amz-Expires=86400&X-Amz-Signature=536f4da17f39f238a44548ddc8c5c81235cf76820161643c5776ee225df0877f&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 마우스 이벤트 처리하기"
    ]
@@ -1059,44 +1067,70 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# import sys\n",
-    "# import numpy as np\n",
-    "# import cv2\n",
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/68d9f86c-c7be-4164-90d5-5039a0b4ae15/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210701%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210701T054308Z&X-Amz-Expires=86400&X-Amz-Signature=7dd249b5842c227d76a4e1fa3a7b2004c29cd6f2b083a13f3dfa6a9147b5dabf&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EVENT_LBUTTONDOWN: 56, 29\n",
+      "EVENT_LBUTTONUP: 290, 224\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import numpy as np\n",
+    "import cv2\n",
     "\n",
-    "\n",
-    "oldx = oldy = -1\n",
+    "oldx = oldy = -1 # 첫 값 할당 , 뭐든 상관 없다\n",
     "\n",
     "def on_mouse(event, x, y, flags, param):\n",
     "    global oldx, oldy\n",
     "\n",
-    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "    if event == cv2.EVENT_LBUTTONDOWN: # 위에 정리된표처럼 마우스클릭위치를 확인가능\n",
     "        oldx, oldy = x, y\n",
     "        print('EVENT_LBUTTONDOWN: %d, %d' % (x, y))\n",
     "\n",
     "    elif event == cv2.EVENT_LBUTTONUP:\n",
     "        print('EVENT_LBUTTONUP: %d, %d' % (x, y))\n",
     "\n",
-    "#     elif event == cv2.EVENT_MOUSEMOVE:\n",
-    "#         if flags & cv2.EVENT_FLAG_LBUTTON:\n",
-    "#             cv2.line(img, (oldx, oldy), (x, y), (0, 0, 255), 4, cv2.LINE_AA)\n",
-    "#             cv2.imshow('image', img)\n",
-    "#             oldx, oldy = x, y\n",
+    "    elif event == cv2.EVENT_MOUSEMOVE:\n",
+    "        if flags & cv2.EVENT_FLAG_LBUTTON:\n",
+    "            cv2.line(img, (oldx, oldy), (x, y), (0, 0, 255), 4, cv2.LINE_AA) # 선을 그리는데 빨간색, 굴기는 4\n",
+    "            cv2.imshow('image', img)\n",
+    "            oldx, oldy = x, y\n",
     "\n",
+    "img = np.ones((480, 640, 3), dtype=np.uint8) * 255 # 이미지 창 띄우기\n",
     "\n",
-    "img = np.ones((480, 640, 3), dtype=np.uint8) * 255\n",
-    "\n",
-    "cv2.namedWindow('image')\n",
-    "cv2.setMouseCallback('image', on_mouse, img) #항상 창을 띄우고 호출\n",
-    "\n",
+    "cv2.namedWindow('image') \n",
     "cv2.imshow('image', img)\n",
+    "\n",
+    "cv2.setMouseCallback('image', on_mouse, img) #항상 창을 띄우고 호출(윗 코드 항상 실행 후 호출)\n",
+    "\n",
     "cv2.waitKey()\n",
     "\n",
-    "cv2.destroyAllWindows()\n"
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- start point (56, 29)\n",
+    "- end point (290, 224)\n",
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/6bb82e97-7d64-44f7-9cf2-a4b1a7594a3d/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210701%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210701T054836Z&X-Amz-Expires=86400&X-Amz-Signature=a1b6b143d0c94a811edec4b63b75fa8852a2793e12fbc17d3552c7be81b88c7f&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   },
   {
@@ -1122,9 +1156,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "# import numpy as np\n",
     "# import cv2\n",
@@ -1132,14 +1181,11 @@
     "\n",
     "def on_level_change(pos):\n",
     "    print(pos)\n",
-    "    value = pos * 16\n",
-    "#     if value >= 255:\n",
-    "#         value = 255\n",
-    "#     value = np.clip(value,0,255)\n",
+    "    value = pos * 16 # 0~255사이의 값이 안되면 값이 초기화 됨 그래서 검은색으로 나옴, 따라서 np.clip으로 범위조정\n",
+    "    value = np.clip(value,0,255) # 최대 최소를 0, 255로 0밑으로 가면 0으로 처리 , 255넘어가면 255\n",
     "\n",
     "    img[:] = value\n",
     "    cv2.imshow('image', img)\n",
-    "\n",
     "\n",
     "img = np.zeros((480, 640), np.uint8)\n",
     "cv2.namedWindow('image')\n",
@@ -1148,6 +1194,13 @@
     "cv2.imshow('image', img)\n",
     "cv2.waitKey()\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/3b002bf6-4db2-4077-9318-53ff607b528d/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210701%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210701T061348Z&X-Amz-Expires=86400&X-Amz-Signature=2a95e4308b9ebad0568d129300d7facaf16a30b5d1caf62f568e68df09d1d314&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   }
  ],
