--- a/OpenCV/Ch_3_영상처리기초.ipynb
+++ b/OpenCV/Ch_3_영상처리기초.ipynb
@@ -485,14 +485,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import numpy as np\n",
     "import cv2\n",
-    "\n",
     "\n",
     "src = cv2.imread('candies.png')\n",
     "#src = cv2.imread('candies2.png')\n",
@@ -505,6 +504,7 @@
     "\n",
     "dst1 = cv2.inRange(src, (0, 128, 0), (100, 255, 100)) # b, g, r\n",
     "dst2 = cv2.inRange(src_hsv, (50, 150, 0), (80, 255, 255)) # h, s, v\n",
+    "# 색깔을 뽑을때는 hsv로 뽀는게 더 좋아보인다.\n",
     "\n",
     "cv2.imshow('src', src)\n",
     "cv2.imshow('dst1', dst1)\n",
@@ -512,6 +512,84 @@
     "cv2.waitKey()\n",
     "\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/a176faef-32fb-476c-94ce-5448c7958385/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210702%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210702T060132Z&X-Amz-Expires=86400&X-Amz-Signature=4de431b1fd58979308d4de1662d85b0628cfdfcf0bee49f8ea7afefac09dfe4a&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 히스토그램 역투영"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "\n",
+    "# 입력 영상에서 ROI를 지정하고, 히스토그램 계산\n",
+    "\n",
+    "src = cv2.imread('cropland.png')\n",
+    "\n",
+    "if src is None:\n",
+    "    print('Image load failed!')\n",
+    "    sys.exit()\n",
+    "\n",
+    "x, y, w, h = cv2.selectROI(src) # x, y, w, h 값 반환\n",
+    "\n",
+    "src_ycrcb = cv2.cvtColor(src, cv2.COLOR_BGR2YCrCb)\n",
+    "crop = src_ycrcb[y:y+h, x:x+w] # 네모 박스를 띄어냄\n",
+    "\n",
+    "# 0 번은 조명/밝기 정보, [1,2] = Cr, Cb channel\n",
+    "channels = [1, 2]\n",
+    "cr_bins = 128\n",
+    "cb_bins = 128\n",
+    "histSize = [cr_bins, cb_bins]\n",
+    "cr_range = [0, 256]\n",
+    "cb_range = [0, 256]\n",
+    "\n",
+    "# [0, 256, 0, 256]\n",
+    "ranges = cr_range + cb_range\n",
+    "\n",
+    "hist = cv2.calcHist([crop], channels, None, histSize, ranges)\n",
+    "hist_norm = cv2.normalize(cv2.log(hist+1), None, 0, 255, cv2.NORM_MINMAX, cv2.CV_8U)\n",
+    "\n",
+    "# 입력 영상 전체에 대해 히스토그램 역투영\n",
+    "backproj = cv2.calcBackProject([src_ycrcb], channels, hist, ranges, 1)\n",
+    "dst = cv2.copyTo(src, backproj)\n",
+    "\n",
+    "cv2.imshow('backproj', backproj)\n",
+    "cv2.imshow('hist_norm', hist_norm)\n",
+    "cv2.imshow('dst', dst)\n",
+    "\n",
+    "cv2.waitKey()\n",
+    "cv2.destroyAllWindows()\n",
+    "# 4번쨰 그림으로 비슷한애들을 표시하고 backporj에 적용하여 마스크를떠서 dst로 적용 뽑아내기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/d2e7dd14-18a7-469b-9849-31f2e0d9ba0e/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210702%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210702T062035Z&X-Amz-Expires=86400&X-Amz-Signature=7107d49d387ac13b881b6f8a85dfb7aac25c7e15e02d588d5480d0bb733381cd&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/d1e8e49b-3bf4-432e-8b3d-c6dbb53daf6d/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210702%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210702T062108Z&X-Amz-Expires=86400&X-Amz-Signature=75a11c61417a7130ae158a799cefd725acf0af2b8c9e91ea691e0519be7e9ad5&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   }
  ],
