--- a/OpenCV/Ch_3_영상처리기초.ipynb
+++ b/OpenCV/Ch_3_영상처리기초.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/8b0fe68b-5094-44b6-ac50-e6bda75ab144/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210701%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210701T062853Z&X-Amz-Expires=86400&X-Amz-Signature=d2c22004aa00d3b1284437f0c2c824fb7b912744ab95a8ef1984a09459be0ed5&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/8b0fe68b-5094-44b6-ac50-e6bda75ab144/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210706%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210706T051100Z&X-Amz-Expires=86400&X-Amz-Signature=a0dc8f7c6ecd70958baf2cac790e1a8f24672b49c0723de419f999326be66353&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   },
   {
@@ -140,12 +140,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/b965d4e9-15a7-421e-b066-e41c71d54db2/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210701%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210701T064556Z&X-Amz-Expires=86400&X-Amz-Signature=4a22cff534505f6bb6205dd003c4dcefb79e3d539df99aa149077aac3bb77068&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/b965d4e9-15a7-421e-b066-e41c71d54db2/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210706%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210706T051136Z&X-Amz-Expires=86400&X-Amz-Signature=a23937e17c057b6d76fc029d3ad8d3d92173ccfc68b9cd957cfb3458c94df85e&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/4db009a1-f473-44c6-9199-0c6fd22df077/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210701%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210701T072449Z&X-Amz-Expires=86400&X-Amz-Signature=daee229047c22d4140cb9d35065d7907477198bf012f238f437ceb9e269f8f18&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/4db009a1-f473-44c6-9199-0c6fd22df077/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210706%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210706T051202Z&X-Amz-Expires=86400&X-Amz-Signature=d2332dde4f1509188a8d2a3abba348cc5ced832678dc0d473043487589e1d2d4&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   },
   {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/3ec01366-cd47-4834-976a-e29cffdaf137/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210701%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210701T073150Z&X-Amz-Expires=86400&X-Amz-Signature=da6c940b93314b58838c7c9abe1398a05cc185bc9639f3d98d36ea76043b20f3&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/3ec01366-cd47-4834-976a-e29cffdaf137/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210706%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210706T051315Z&X-Amz-Expires=86400&X-Amz-Signature=8b0ab298f4d25baa119c67dd3140751b5553fa7c97f4ba7c8b341313bc47e14d&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   },
   {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,12 +420,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/23be7453-dcd9-499b-a39e-65b14803258a/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210701%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210701T073446Z&X-Amz-Expires=86400&X-Amz-Signature=8f2694d9fe4172a1f1ca462e69b8d4aa19358e92181fc203567189cf630e0fb4&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/23be7453-dcd9-499b-a39e-65b14803258a/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210706%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210706T051254Z&X-Amz-Expires=86400&X-Amz-Signature=bbb2e66a4442a50753340e42aaf32ca1d6349172ce17349a7a7b901101b09546&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
     "\n",
     "dst1 = cv2.inRange(src, (0, 128, 0), (100, 255, 100)) # b, g, r\n",
     "dst2 = cv2.inRange(src_hsv, (50, 150, 0), (80, 255, 255)) # h, s, v\n",
-    "# 색깔을 뽑을때는 hsv로 뽀는게 더 좋아보인다.\n",
+    "# 색깔을 뽑을때는 hsv로 뽑는게 더 좋아보인다.\n",
     "\n",
     "cv2.imshow('src', src)\n",
     "cv2.imshow('dst1', dst1)\n",
@@ -518,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/a176faef-32fb-476c-94ce-5448c7958385/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210702%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210702T060132Z&X-Amz-Expires=86400&X-Amz-Signature=4de431b1fd58979308d4de1662d85b0628cfdfcf0bee49f8ea7afefac09dfe4a&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/a176faef-32fb-476c-94ce-5448c7958385/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210706%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210706T050814Z&X-Amz-Expires=86400&X-Amz-Signature=9d0351374dfdedb9315aa0a5eb5e0647b23e8198a56bb1a973a01b450f3ae34b&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   },
   {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,14 +582,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/d2e7dd14-18a7-469b-9849-31f2e0d9ba0e/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210702%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210702T062035Z&X-Amz-Expires=86400&X-Amz-Signature=7107d49d387ac13b881b6f8a85dfb7aac25c7e15e02d588d5480d0bb733381cd&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/d1e8e49b-3bf4-432e-8b3d-c6dbb53daf6d/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210706%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210706T050649Z&X-Amz-Expires=86400&X-Amz-Signature=67d26d7aea42a5effa4bfabf6a21fb406ca41cfef6175cf0c9cf61fcfe770e98&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/d1e8e49b-3bf4-432e-8b3d-c6dbb53daf6d/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210702%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210702T062108Z&X-Amz-Expires=86400&X-Amz-Signature=75a11c61417a7130ae158a799cefd725acf0af2b8c9e91ea691e0519be7e9ad5&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/d2e7dd14-18a7-469b-9849-31f2e0d9ba0e/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210706%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210706T050602Z&X-Amz-Expires=86400&X-Amz-Signature=e28197f687f314ad36f2df6c4c4f980d8469f26c090f46e3e345d79c6de10e38&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   }
  ],
