--- a/OpenCV/Ch_4_영상의 특징추출.ipynb
+++ b/OpenCV/Ch_4_영상의 특징추출.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/3964ce47-0989-4a47-b111-ddd20cabe192/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210702%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210702T064001Z&X-Amz-Expires=86400&X-Amz-Signature=79cc64d475b0111ef61eda144518da5becf2a6566e0f953503abef81289cdb29&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/3964ce47-0989-4a47-b111-ddd20cabe192/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210706%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210706T051722Z&X-Amz-Expires=86400&X-Amz-Signature=4e8b9c05f343990e1c4be7426bd857c1068245fc18434d729a03226e41d77c9c&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# magnitude(x, y, magnitude) -> magnitude\n"
+    "# magnitude(x, y, magnitude) -> magnitude"
    ]
   },
   {
@@ -126,14 +126,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/96e77e02-1847-4c6d-8d41-65cf9ff7f1b3/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210702%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210702T071301Z&X-Amz-Expires=86400&X-Amz-Signature=7418099d2ffeb333245b49a457a2f24172107f2ebbb2221acbf6b79f1cad818d&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/96e77e02-1847-4c6d-8d41-65cf9ff7f1b3/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210706%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210706T051759Z&X-Amz-Expires=86400&X-Amz-Signature=4d880312480649ae541049f8f9225ebfbde2ac7af6469409ec8637e41b7de3f0&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/29c57905-90d9-4315-8b75-bf75fa777963/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210702%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210702T071649Z&X-Amz-Expires=86400&X-Amz-Signature=57c5e64945298489f5b14f140eea83a0a7713ab29f834b9bcfdf0655e4546d29&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/29c57905-90d9-4315-8b75-bf75fa777963/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210706%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210706T051814Z&X-Amz-Expires=86400&X-Amz-Signature=dd5d92c2ed408aae631fa6775397af34798b71402376cd326a1e4927582b7d19&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Canny(image, threshold1, threshold2, edges, apertureSize, L2gradient) -> edges\n",
+    "# Canny(image, threshold1, threshold2, edges, apertureSize, L2gradient) -> edges\n",
     "# image : 입력 영상\n",
     "# threshold1: 에지결정 하한값\n",
     "# threshold1: 에지결정 상한값\n",
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/e516d11b-d6de-4c4d-a483-5af86c4809b2/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210702%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210702T073122Z&X-Amz-Expires=86400&X-Amz-Signature=6f6f1f0eca4fab4c348714990054212ce0b4d282511a2c4a797454a01e36205e&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/e516d11b-d6de-4c4d-a483-5af86c4809b2/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210706%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210706T051832Z&X-Amz-Expires=86400&X-Amz-Signature=5951a5998e63f22da9a352a3ca4db37e9679c6447bc6d0c546bb4d89581f73e0&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   },
   {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/eda90fd8-30de-4c65-b4cb-909a2b60ecff/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210706%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210706T052117Z&X-Amz-Expires=86400&X-Amz-Signature=a267d592f4e9efb388121cb6b02e7794e0e67b8619cee88936118cc1e36e9894&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
+   ]
   }
  ],
  "metadata": {
