--- a/OpenCV/Ch_5_이진영상처리.ipynb
+++ b/OpenCV/Ch_5_이진영상처리.ipynb
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,6 @@
     "import numpy as np\n",
     "import cv2\n",
     "\n",
-    "\n",
     "src = cv2.imread('rice.png', cv2.IMREAD_GRAYSCALE)\n",
     "\n",
     "if src is None:\n",
@@ -403,6 +402,7 @@
     "# src 영상에 지역 이진화 수행 (local_th.py 참고)\n",
     "dst1 = np.zeros(src.shape, np.uint8)\n",
     "\n",
+    "# 4분할\n",
     "bw = src.shape[1] // 4\n",
     "bh = src.shape[0] // 4\n",
     "\n",
@@ -415,9 +415,9 @@
     "cnt1, _ = cv2.connectedComponents(dst1)\n",
     "print('cnt1:', cnt1)\n",
     "\n",
-    "dst2 = cv2.morphologyEx(dst1, cv2.MORPH_OPEN, None)\n",
-    "#dst2 = cv2.erode(dst1, None)\n",
-    "#dst2 = cv2.dilate(dst2, None)\n",
+    "dst2 = cv2.morphologyEx(dst1, cv2.MORPH_OPEN, None) # 열기 연산\n",
+    "# dst3 = cv2.erode(dst1, None)\n",
+    "# dst4 = cv2.dilate(dst3, None)\n",
     "\n",
     "cnt2, _ = cv2.connectedComponents(dst2)\n",
     "print('cnt2:', cnt2)\n",
@@ -425,9 +425,20 @@
     "cv2.imshow('src', src)\n",
     "cv2.imshow('dst1', dst1)\n",
     "cv2.imshow('dst2', dst2)\n",
+    "# cv2.imshow('dst3', dst3)\n",
+    "# cv2.imshow('dst4', dst3)\n",
     "\n",
     "cv2.waitKey()\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 열기\n",
+    "\n",
+    "![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/5c71e4af-5c55-4458-8056-bf26d7ed42b3/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAT73L2G45O3KS52Y5%2F20210707%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20210707T050655Z&X-Amz-Expires=86400&X-Amz-Signature=27bc2a16c3c772d2046408b6cc096cdca00e2d6154d510f7c9e096b7f180761d&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22)"
    ]
   },
   {
@@ -489,7 +500,7 @@
     "idx = 0\n",
     "while idx >= 0:\n",
     "    c = (random.randint(0, 255), random.randint(0, 255), random.randint(0, 255))\n",
-    "    cv2.drawContours(dst, contours, idx, c, 2, cv2.LINE_8, hier)\n",
+    "    cv2.drawContours(dst, contours, idx, c, 2, cv2.LINE_8, hier) # hier를 지정하면 내부 선까지 모두 한다??\n",
     "    idx = hier[0, idx, 0]\n",
     "\n",
     "cv2.imshow('src', src)\n",
